bynkc/tests/fixtures/negative/243_indexed_bad_argument/src/shop/a.bynk
context shop.a

type R = {
  id: String,
  orderId: String,
}

agent A {
  key k: String
  store m: Map[String, R] @indexed(orderId)

  on call howMany() -> Effect[Int] {
    let n <- m.size()
    Effect.pure(n)
  }
}
